language names corrected

--- a/config/locales/sw.yml
+++ b/config/locales/sw.yml
@@ -44,7 +44,7 @@ sw:
   "my notifications": "simamia taarifa"
   "my connections": "akaunti zilizounganishwa"
   "my devices": "vifaa vilivyounganishwa"
-  "language name": "Kiingereza"
+  "language name": "Kiswahili"
   "sign in": "Ingia"
   "sign up": "jiunge"
   "have an account": "unayo akaunti tayari?/unaakaunti tayari?"
