language names corrected

--- a/config/locales/zh_cn.yml
+++ b/config/locales/zh_cn.yml
@@ -56,7 +56,7 @@ zh_CN:
   "my notifications": "管理通知"
   "my connections": "已绑定帐户"
   "my devices": "已绑定设备"
-  "language name": "英文"
+  "language name": "中国的"
   "sign in": "登录"
   "sign up": "注册"
   "have an account": "已有帐户？"
