--- a/config/locales/zh_tw.yml
+++ b/config/locales/zh_tw.yml
@@ -56,7 +56,7 @@ zh_TW:
   "my notifications": "管理訊息通知"
   "my connections": "已連結的帳戶"
   "my devices": "已連結的設備"
-  "language name": "英文"
+  "language name": "中國的"
   "sign in": "登入"
   "sign up": "登錄"
   "have an account": "已有帳號？"
