fixing africans strings

--- a/config/locales/af.yml
+++ b/config/locales/af.yml
@@ -7,7 +7,7 @@ af:
   "about title": "Aangande YouVersion"
   "make a donation": "Maak n skenking"
   "thanks for your donation": "Dankie vir u donasie!"
-  "thanks authorization": "Dankie vir u skenking!U magtigingskode is %{kode}."
+  "thanks authorization": "Dankie vir u skenking!U magtigingskode is %{code}."
   "donation error": "Ons is jammer, maar iets het verkeerd geloop met u donasie. Probeer asseblief weer."
   "created ago": "%{time_ago} terug geskep"
   "copy": "Kopieer"
@@ -140,7 +140,7 @@ af:
     "listen": "Luister"
     "parallel": "Parallel"
     "full screen": "Vol  Skerm"
-    "about the version": "Aangaande die %{weergawe}"
+    "about the version": "Aangaande die %{version}"
     "settings": "Leser Opsies"
     "invalid chapter title": "Oor hierdie weergawe"
     "invalid chapter text": "Hierdie hoofstuk bestaan nie hierdie weergawe nie."
@@ -189,7 +189,7 @@ af:
     "user bookmarks": "%{user} se Boekmerke"
     "my likes": "My Gunstelinge"
     "user likes": "%{user} se Gunstelinge"
-    "revised date": "Laas hersien op %{datum}"
+    "revised date": "Laas hersien op %{date}"
     "privacy": 
       "policy": "%{youversion} Privaatheidsbeleid"
       "what we collect": "Wat ons bymekaarmaak en hoe ons dit gebruik"
