--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -541,3 +541,4 @@ en:
     java:                                       "Java"
     symbian:                                    "Symbian"
     mobile web:                                 "Mobile Web"
+    amazon:                                     "Kindle"
