fixed mobile string for amazon. i18n terms/privacy

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -541,4 +541,4 @@ en:
     java:                                       "Java"
     symbian:                                    "Symbian"
     mobile web:                                 "Mobile Web"
-    amazon:                                     "Kindle"
+    amazon:                                     "Kindle Fire"
