added /resend to resend emails
Change-Id: Icc3131da5a3e3845564a63950cd48b6d606f800c

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -226,6 +226,11 @@ en:
     yes reset:                                  "Yes, reset my password"
     yes reset and log out:                      "Yes, sign me out and reset my password"
     forgot password:                            "Forgot your password?"
+    resend success:                             "Your confirmation email has been resent. Please check your email."
+    resend error:                               "Sorry, there was an error resending your confirmation email. Please make sure you're entering a valid, registered email address that hasn't already been confirmed."
+    resend confirmation title:                  "Didn't get your confimration email?"
+    resend confirmation copy:                   "Enter the email address you used to register below and we'll send you another confirmation email."
+    resend confirmation button:                 "Resend Confirmation"
     privacy:
       policy:                                   "%{youversion} Privacy Policy"
       intro:                                    "YouVersion, a Website and Application owned and operated by LifeChurch.tv, knows you care how information about you is used and shared. We hope the following statements will help you understand how YouVersion will collect, use and protect the information you provide to us on our site or app. We will not use or share your information with anyone except as described in this Privacy Policy."
