mediaelement assets reference for flash fallback -- so it'll work with S3

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -477,7 +477,7 @@ en:
     all versions:                               "All %{language_name} Versions"
   donate:
     donate now:                                 "Donate Now"
-    promo 1:                                    "For every $1 you give, 10 more people get access to the bible on their mobile phone."
+    promo 1:                                    "For every $1 you give, 10 more people get access to the Bible on their mobile phone."
     promo 2:                                    "With YouVersion, the Bible is always nearby. Watch our video."
     promo 3:                                    "This year over 5 billion people will use a mobile phone. Donate now."
     headline:                                   "Everyone needs God’s Word."
